[tool.poetry]
name = "langchain-example"
version = "0.1.0"
description = ""
authors = ["Raphael MANSUY <raphael.mansuy.partner@decathlon.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.1.0"
langchain-community = "^0.0.12"
langchain-core = "^0.1.10"
langchain-cli = "^0.0.20"
boto3 = "^1.34.23"
langchain-openai = "^0.0.3"
langchain-experimental = "^0.0.49"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
